Build Ruby 3.5 or greater with zjit
zjit is the next step in ruby jitting. More details at https://bugs.ruby-lang.org/issues/21221

ZJIT requires rust 1.85, so bump the version.

--- a/3.5-rc/bookworm/Dockerfile
+++ b/3.5-rc/bookworm/Dockerfile
@@ -68,6 +68,7 @@ RUN set -eux; \
 		--disable-install-doc \
 		--enable-shared \
 		${rustArch:+--enable-yjit} \
+	  ${rustArch:+--enable-zjit} \
 	; \
 	make -j "$(nproc)"; \
 	make install; \
