--- a/3.5-rc/slim-bookworm/Dockerfile
+++ b/3.5-rc/slim-bookworm/Dockerfile
@@ -93,6 +93,7 @@ RUN set -eux; \
 		--disable-install-doc \
 		--enable-shared \
 		${rustArch:+--enable-yjit} \
+	  ${rustArch:+--enable-zjit} \
 	; \
 	make -j "$(nproc)"; \
 	make install; \
